--- a/aspnetapistarter.yml
+++ b/aspnetapistarter.yml
@@ -42,6 +42,24 @@ spec:
           name: https
           protocol: TCP
 #          hostPort: 8082
+        readinessProbe:
+          httpGet:
+            path: /health/ready
+            port: http
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
+          successThreshold: 1
+        livenessProbe:
+          httpGet:
+            path: /health/live
+            port: http
+          initialDelaySeconds: 30
+          periodSeconds: 3
+          timeoutSeconds: 3
+          failureThreshold: 3
+          successThreshold: 1
         volumeMounts:
         - name: mysql-connection
           mountPath: "/app/appsettings.mysql.json"
@@ -51,33 +69,33 @@ spec:
           limits:
             cpu: 250m
             memory: 1024Mi
-#      - name: fluentd
-#        image: khteh/fluentd:latest
-#        env:
-#        - name: FLUENTD_ARGS
-#          value: -c /etc/td-agent/td-agent.conf
-#        volumeMounts:
+      - name: fluentd
+        image: khteh/fluentd:latest
+        env:
+        - name: FLUENTD_ARGS
+          value: -c /etc/td-agent/td-agent.conf
+        volumeMounts:
 #        - name: tomcat-log
 #          mountPath: /usr/local/tomcat/logs
-#        - name: fluentd-config
-#          mountPath: /etc/td-agent
-#        - name: access-log-template
-#          mountPath: /tmp/access_log_template.json
-#          subPath: access_log_template.json
-#          readOnly: true
-#        resources:
-#          limits:
-#            cpu: 250m
-#            memory: 1024Mi
+        - name: fluentd-config
+          mountPath: /etc/td-agent
+        - name: access-log-template
+          mountPath: /tmp/access_log_template.json
+          subPath: access_log_template.json
+          readOnly: true
+        resources:
+          limits:
+            cpu: 250m
+            memory: 1024Mi
       volumes:
       - name: mysql-connection
         secret:
           secretName: aspnetapistarter
-#      - name: fluentd-config
-#        configMap:
-#          name: fluentd-config
-#      - name: access-log-template
-#        configMap:
-#          name: access-log-template
+      - name: fluentd-config
+        configMap:
+          name: fluentd-config
+      - name: access-log-template
+        configMap:
+          name: access-log-template
 #      - name: tomcat-log
 #        emptyDir: {}
