--- a/fluentd-tomcat-config.yml
+++ b/fluentd-tomcat-config.yml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   creationTimestamp: "2019-01-28T07:54:33Z"
-  name: fluentd-config
+  name: fluentd-tomcat-config
   namespace: default
   resourceVersion: "4104691"
-  selfLink: /api/v1/namespaces/default/configmaps/fluentd-config
+  selfLink: /api/v1/namespaces/default/configmaps/fluentd-tomcat-config
   uid: f32e2db1-22d1-11e9-a14d-482ae31e6a94
 data:
   td-agent.conf: |
@@ -37,14 +37,14 @@ data:
       @type stdout
       @id output_stdout
     </match>
-    <filter aspnetcore-access>
+    <filter restapi-access>
       @type grep
       <exclude>
         key url
         pattern (^/$|health|^/ui/index.html$)
      </exclude>
     </filter>
-    <filter aspnetcore-access>
+    <filter restapi-access>
       @type geoip
       # Specify one or more geoip lookup field which has ip address (default: host)
       geoip_lookup_keys ip
@@ -71,7 +71,7 @@ data:
       # Set @log_level (default: warn)
       @log_level         info
     </filter>
-    <match aspnetcore-access>
+    <match restapi-access>
       @type copy
       <store> 
         @type elasticsearch
@@ -88,7 +88,7 @@ data:
         # index_name fluentd.${tag}.%Y%m%d 
         type_name _doc
         logstash_format true # Setting this option to true will ignore the index_name setting. The default index name prefix is logstash-.
-        logstash_prefix aspnetcore.access.logs
+        logstash_prefix restapi.access.logs
         template_name access_log_template
         template_file /tmp/access_log_template.json
         template_overwrite true
@@ -96,11 +96,8 @@ data:
           timekey 60# chunks per hours ("3600" also available)
         </buffer>
       </store>
-      <store>
-        @type stdout
-      </store>
     </match>
-    <match aspnetcore>
+    <match restapi>
       @type copy
       <store> 
         @type elasticsearch
@@ -117,7 +114,7 @@ data:
         # index_name fluentd.${tag}.%Y%m%d
         type_name _doc
         logstash_format true # Setting this option to true will ignore the index_name setting. The default index name prefix is logstash-.
-        logstash_prefix aspnetcore.logs
+        logstash_prefix restapi.logs
         <buffer tag, time>
           timekey 60# chunks per hours ("3600" also available)
         </buffer>
@@ -136,8 +133,6 @@ data:
     <source>
       @type forward
       @id input_forward
-      port 24224
-      bind 0.0.0.0
     </source>
     <source>
       @type http
@@ -150,4 +145,26 @@ data:
       @id input_debug_agent
       bind 127.0.0.1
       port 24230
+    </source>
+    <source>
+      @type tail
+      ## 12:36:00 0:0:0:0:0:0:0:1 0:0:0:0:0:0:0:1 POST /restapi-admin/api/getEnquiries cacheBuster=1549802159278 200 115646 0.778
+      format /^(?<time>[0-9]{2}:[0-9]{2}:[0-9]{2}) (?<ip>[^ ]*) (?<dns>[^ ]*) (?<method>[A-Z]*) (?<url>[^ ]*) (?<querystring>\S*) (?<code>[^ ]*) (?<size>[^ ]*) (?<duration>[^ ]*)?$/
+      path /usr/local/tomcat/logs/localhost_access_log.%Y-%m-%d.txt
+      pos_file /var/log/td-agent/pos/tomcat_access_logs.pos
+      read_from_head true
+      tag restapi-access
+    </source>
+    <source>
+      @type tail
+      format multiline
+      # Match the date at the beginning of each entry, which can be in one of two
+      # different formats.
+      format multiline
+      format_firstline /[0-9]{2}-[A-Za-z]{3}-[0-9]{4}/
+      format1 /^(?<datetime>[0-9]{2}-[A-Za-z]{3}-[0-9]{4} [0-9]{2}:[0-9]{2}:[0-9]{2}.[0-9]{3}) (?<Log-Level>[A-Z]*) (?<message>.*)$/
+      path /usr/local/tomcat/logs/catalina*,/usr/local/tomcat/logs/localhost*.log
+      pos_file /var/log/td-agent/pos/tomcat-multiline.pos
+      read_from_head true
+      tag restapi
     </source>
