--- a/biz4x-frontend.yml
+++ b/biz4x-frontend.yml
@@ -45,6 +45,24 @@ spec:
           name: https
           protocol: TCP
 #          hostPort: 8082
+        readinessProbe:
+          httpGet:
+            path: /health/ready
+            port: http
+          initialDelaySeconds: 30
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
+          successThreshold: 1
+        livenessProbe:
+          httpGet:
+            path: /health/live
+            port: http
+          initialDelaySeconds: 30
+          periodSeconds: 3
+          timeoutSeconds: 3
+          failureThreshold: 3
+          successThreshold: 1
         volumeMounts:
         - name: biz4x-secret
           mountPath: /app/appsettings.secret.json
