--- a/fluentd-config.yml
+++ b/fluentd-config.yml
@@ -71,13 +71,14 @@ data:
       # Set @log_level (default: warn)
       @log_level         info
     </filter>
-    <match aspnetcore-access>
+    <match **>
       @type copy
       <store> 
         @type elasticsearch
         @log_level trace
         time_key @timestamp
         include_timestamp true
+        include_tag_key true
         reconnect_on_error true
         reload_on_failure true
         reload_connections false
@@ -88,7 +89,7 @@ data:
         # index_name fluentd.${tag}.%Y%m%d 
         type_name _doc
         logstash_format true # Setting this option to true will ignore the index_name setting. The default index name prefix is logstash-.
-        logstash_prefix aspnetcore.access.logs
+        logstash_prefix aspnetapistarter.logs
         template_name access_log_template
         template_file /tmp/access_log_template.json
         template_overwrite true
@@ -98,29 +99,6 @@ data:
       </store>
       <store>
         @type stdout
-      </store>
-    </match>
-    <match aspnetcore>
-      @type copy
-      <store> 
-        @type elasticsearch
-        @log_level trace
-        time_key @timestamp
-        include_timestamp true
-        reconnect_on_error true
-        reload_on_failure true
-        reload_connections false
-        request_timeout 120s
-        host svc-elasticsearch
-        port 9200
-        flush_interval 10s
-        # index_name fluentd.${tag}.%Y%m%d
-        type_name _doc
-        logstash_format true # Setting this option to true will ignore the index_name setting. The default index name prefix is logstash-.
-        logstash_prefix aspnetcore.logs
-        <buffer tag, time>
-          timekey 60# chunks per hours ("3600" also available)
-        </buffer>
       </store>
     </match>
     <label @ERROR>
@@ -136,8 +114,6 @@ data:
     <source>
       @type forward
       @id input_forward
-      port 24224
-      bind 0.0.0.0
     </source>
     <source>
       @type http
@@ -151,3 +127,29 @@ data:
       bind 127.0.0.1
       port 24230
     </source>
+    # Examples:
+    # time="2016-02-04T06:51:03.053580605Z" level=info msg="GET /containers/json"
+    # time="2016-02-04T07:53:57.505612354Z" level=error msg="HTTP Error" err="No such image: -f" statusCode=404
+    <source>
+      @type tail
+      ## 12:36:00 0:0:0:0:0:0:0:1 0:0:0:0:0:0:0:1 POST /restapi-admin/api/getEnquiries cacheBuster=1549802159278 200 115646 0.778
+      #format /^(?<time>[0-9]{2}:[0-9]{2}:[0-9]{2}) (?<ip>[^ ]*) (?<dns>[^ ]*) (?<method>[A-Z]*) (?<url>[^ ]*) (?<querystring>\S*) (?<code>[^ ]*) (?<size>[^ ]*) (?<duration>[^ ]*)?$/
+      format /^time="(?<time>[^)]*)" level=(?<severity>[^ ]*) message="(?<message>[^"]*)"( err="(?<error>[^"]*)")?( statusCode=($<status_code>\d+))?/
+      path /var/log/aspnetcore/log*
+      pos_file /var/log/td-agent/pos/aspnetcore_logs.pos
+      read_from_head true
+      tag aspnetcore
+    </source>
+#    <source>
+#      @type tail
+#      format multiline
+#      # Match the date at the beginning of each entry, which can be in one of two
+#      # different formats.
+#      format multiline
+#      format_firstline /[0-9]{2}-[A-Za-z]{3}-[0-9]{4}/
+#      format1 /^(?<datetime>[0-9]{2}-[A-Za-z]{3}-[0-9]{4} [0-9]{2}:[0-9]{2}:[0-9]{2}.[0-9]{3}) (?<Log-Level>[A-Z]*) (?<message>.*)$/
+#      path /usr/local/tomcat/logs/catalina*,/usr/local/tomcat/logs/localhost*.log
+#      pos_file /var/log/td-agent/pos/tomcat-multiline.pos
+#      read_from_head true
+#      tag aspnetcore
+#    </source>
