--- a/mysql-secret.yml
+++ b/mysql-secret.yml
@@ -4,6 +4,9 @@ metadata:
   name: mysql-secret
 type: Opaque
 data:
-  mysql-root-password: UEAkJHcwcmQ=
-  mysql-user: Z3Vlc3QK
-  mysql-password: UEAkJHcwcmQ=
+  mysql-root-host: bG9jYWxob3N0
+  mysql-root-password: NHhMYWJzLmNvbQ==
+  mysql-user: Z3Vlc3Q=
+  mysql-password: NHhMYWJzLmNvbQ==
+  mysql-replication-user: cmVwbGljYXRpb24=
+  mysql-replication-password: NHhMYWJzLmNvbQ==
