--- a/mysql-master.yml
+++ b/mysql-master.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service 
 metadata:
-  name: svc-mysql
+  name: svc-mysql-master
   labels: 
-    app: db-mysql
+    app: mysql-master
     component: mysql
 spec:
   selector:
-    app: db-mysql
+    app: mysql-master
     component: mysql
 #    tier: database
   ports:  
@@ -18,32 +18,36 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: mysql
+  name: mysql-master
   labels:
-    app: db-mysql
+    app: mysql-master
     component: mysql
 spec:
-  serviceName: svc-mysql
+  serviceName: svc-mysql-master
   podManagementPolicy: "Parallel" # Default is OrderedReady
   replicas: 1 # Default is 1
   selector:
     matchLabels:
-      app: db-mysql # Has to match .spec.template.metadata.labels
+      app: mysql-master # Has to match .spec.template.metadata.labels
       component: mysql
   template:
     metadata:
       labels:
-        app: db-mysql # Has to match .spec.selector.matchLabels
+        app: mysql-master # Has to match .spec.selector.matchLabels
         component: mysql
     spec:
       terminationGracePeriodSeconds: 10
       containers:
       - name: mysql
 #        image: mysql:latest
-        image: khteh/mysql:latest
+        image: khteh/mysql-master:latest
         imagePullPolicy: Always
 #        command: ["mysqld"]
 #        args: ["--lower_case_table_names=1", "--skip-ssl", "--ignore-db-dir=lost+found"]
+        lifecycle:
+          postStart:
+            exec:
+              command: ["/usr/local/bin/server-id.sh"]
         env:
 #         - name: MYSQL_ALLOW_EMPTY_PASSWORD
 #           value: "1"
@@ -57,6 +61,16 @@ spec:
              secretKeyRef:
                name: mysql-secret
                key: mysql-root-password
+         - name: MYSQL_REPLICATION_PASSWORD
+           valueFrom:
+             secretKeyRef:
+               name: mysql-secret
+               key: mysql-replication-password
+         - name: MYSQL_REPLICATION_USER
+           valueFrom:
+             secretKeyRef:
+               name: mysql-secret
+               key: mysql-replication-user
          - name: MYSQL_USER
            valueFrom:
              secretKeyRef:
@@ -75,7 +89,7 @@ spec:
         - containerPort: 3306
           name: mysql
         volumeMounts:
-        - name: mysql-persistent-storage
+        - name: mysql-master-persistent-storage
           mountPath: /var/lib/mysql
           subPath: mysql
         - name: mysql-initdb
@@ -86,7 +100,7 @@ spec:
           name: mysqlinit
   volumeClaimTemplates:
   - metadata:
-      name: mysql-persistent-storage
+      name: mysql-master-persistent-storage
     spec:
       accessModes: [ "ReadWriteOnce" ]
 #      storageClassName: local-storage
