--- a/aspnetapistarter.yml
+++ b/aspnetapistarter.yml
@@ -33,6 +33,9 @@ spec:
       - name: aspnetapistarter
         image: khteh/asp.netcoreapistarter:latest
         imagePullPolicy: Always
+        env:
+          - name: ASPNETCORE_ENVIRONMENT
+            value: Production
         ports:
         - containerPort: 5000
           name: http
@@ -46,7 +49,7 @@ spec:
           httpGet:
             path: /health/ready
             port: http
-          initialDelaySeconds: 30
+          initialDelaySeconds: 20
           periodSeconds: 5
           timeoutSeconds: 3
           failureThreshold: 3
@@ -55,7 +58,7 @@ spec:
           httpGet:
             path: /health/live
             port: http
-          initialDelaySeconds: 30
+          initialDelaySeconds: 20
           periodSeconds: 3
           timeoutSeconds: 3
           failureThreshold: 3
