--- a/aspnetapistarter.yml
+++ b/aspnetapistarter.yml
@@ -36,6 +36,8 @@ spec:
         env:
           - name: ASPNETCORE_ENVIRONMENT
             value: Production
+          - name: ASPNETCORE_URLS
+            value: "http://0.0.0.0:5000"
         ports:
         - containerPort: 5000
           name: http
@@ -49,7 +51,7 @@ spec:
           httpGet:
             path: /health/ready
             port: http
-          initialDelaySeconds: 20
+          initialDelaySeconds: 10
           periodSeconds: 5
           timeoutSeconds: 3
           failureThreshold: 3
@@ -58,7 +60,7 @@ spec:
           httpGet:
             path: /health/live
             port: http
-          initialDelaySeconds: 20
+          initialDelaySeconds: 10
           periodSeconds: 3
           timeoutSeconds: 3
           failureThreshold: 3
@@ -96,6 +98,9 @@ spec:
       - name: mysql-connection
         secret:
           secretName: aspnetapistarter
+          items:
+          - key: aspnetapistarter.mysql.json
+            path: appsettings.mysql.json
       - name: fluentd-config
         configMap:
           name: fluentd-config
