--- a/fluentd-config.yml
+++ b/fluentd-config.yml
@@ -18,54 +18,54 @@ data:
     # @see http://docs.fluentd.org/articles/http-to-td
     #
     # This section matches events whose tag is td.DATABASE.TABLE
-    <match td.*.*>
-      @type tdlog
-      @id output_td
-      apikey YOUR_API_KEY
-      auto_create_table
-      <buffer>
-        @type file
-        path /var/log/td-agent/buffer/td
-      </buffer>
-      <secondary>
-        @type file
-        path /var/log/td-agent/failed_records
-      </secondary>
-    </match>
-    ## match tag=debug.** and dump to console
-    <match debug.**>
-      @type stdout
-      @id output_stdout
-    </match>
+    ####
+    ## Source descriptions:
+    ##
+    ## built-in TCP input
+    ## @see http://docs.fluentd.org/articles/in_forward
+    <source>
+      @type forward
+      @id input_forward
+    </source>
+    <source>
+      @type http
+      @id input_http
+      port 8889
+    </source>
+    ## live debugging agent
+    <source>
+      @type debug_agent
+      @id input_debug_agent
+      bind 127.0.0.1
+      port 24230
+    </source>
+    <source>
+      @type tail
+      format json
+      path /var/log/aspnetcore/log*
+      pos_file /var/log/td-agent/pos/aspnetcore_logs.pos
+      read_from_head true
+      tag aspnetcore
+    </source>
     <filter fluent.*>
       @type grep
       <exclude>
         key tag
-        pattern fluent.trace
+        pattern /fluent\.trace/
      </exclude>
     </filter>
-    <filter aspnetcore-access>
+    <filter aspnetcore>
       @type grep
       <exclude>
         key fields.Path
         pattern /health/
      </exclude>
-    </filter>
-    <filter aspnetcore-access>
-      @type grep
       <exclude>
         key fields.RequestPath
         pattern /health/
      </exclude>
     </filter>
-    <filter aspnetcore-access>
-      @type grep
-      <exclude>
-        key message
-        pattern /health/
-     </exclude>
-    </filter>
-    <filter aspnetcore-access>
+    <filter aspnetcore>
       @type geoip
       # Specify one or more geoip lookup field which has ip address (default: host)
       geoip_lookup_keys ip
@@ -92,7 +92,26 @@ data:
       # Set @log_level (default: warn)
       @log_level         info
     </filter>
-    <match **>
+    <match td.*.*>
+      @type tdlog
+      @id output_td
+      apikey YOUR_API_KEY
+      auto_create_table
+      <buffer>
+        @type file
+        path /var/log/td-agent/buffer/td
+      </buffer>
+      <secondary>
+        @type file
+        path /var/log/td-agent/failed_records
+      </secondary>
+    </match>
+    ## match tag=debug.** and dump to console
+    <match debug.**>
+      @type stdout
+      @id output_stdout
+    </match>
+    <match aspnetcore>
       @type copy
       <store> 
         @type elasticsearch
@@ -127,32 +146,3 @@ data:
         @type stdout
       </match>
     </label>
-    ####
-    ## Source descriptions:
-    ##
-    ## built-in TCP input
-    ## @see http://docs.fluentd.org/articles/in_forward
-    <source>
-      @type forward
-      @id input_forward
-    </source>
-    <source>
-      @type http
-      @id input_http
-      port 8889
-    </source>
-    ## live debugging agent
-    <source>
-      @type debug_agent
-      @id input_debug_agent
-      bind 127.0.0.1
-      port 24230
-    </source>
-    <source>
-      @type tail
-      format json
-      path /var/log/aspnetcore/log*
-      pos_file /var/log/td-agent/pos/aspnetcore_logs.pos
-      read_from_head true
-      tag aspnetcore
-    </source>
