(1) Fix ES index name (2) Remove unsupported prvileged security context

--- a/daemonset.yml
+++ b/daemonset.yml
@@ -18,8 +18,8 @@ spec:
       - name: daemonset
         image: gcr.io/google-containers/startup-script:v1
         imagePullPolicy: IfNotPresent
-        securityContext:
-          privileged: true
+#        securityContext:
+#          privileged: true
         env:
         - name: STARTUP_SCRIPT
           value: |
