--- a/biz4x/mysql-initjob.yml
+++ b/biz4x/mysql-initjob.yml
@@ -26,7 +26,7 @@ spec:
                name: mysql-secret
                key: mysql-password
          - name: MYSQL_HOST
-           value: svc-mysql
+           value: biz4x.cihvxb4z6n8p.ap-southeast-1.rds.amazonaws.com
          - name: MYSQL_DATABASE
            value: biz4xdb 
   backoffLimit: 3
