--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -20,16 +20,16 @@ spec:
         role: data
     spec:
       terminationGracePeriodSeconds: 10
-#      affinity:
-#        podAntiAffinity:
-#          requiredDuringSchedulingIgnoredDuringExecution:
-#          - labelSelector:
-#              matchExpressions:
-#              - key: role
-#                operator: In
-#                values:
-#                - data
-#            topologyKey: "kubernetes.io/hostname"
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: role
+                operator: In
+                values:
+                - data
+            topologyKey: "kubernetes.io/hostname"
       containers:
       - name: elasticsearch
         securityContext:
