--- a/redis-cluster.yml
+++ b/redis-cluster.yml
@@ -18,6 +18,17 @@ spec:
         app: redis-cluster
         component: redis
     spec:
+      terminationGracePeriodSeconds: 10
+#      affinity:
+#        podAntiAffinity:
+#          requiredDuringSchedulingIgnoredDuringExecution:
+#          - labelSelector:
+#              matchExpressions:
+#              - key: app
+#                operator: In
+#                values:
+#                - redis-cluster
+#            topologyKey: "kubernetes.io/hostname"
       containers:
       - name: redis
         image: redis:latest
