--- a/access-log-template.yml
+++ b/access-log-template.yml
@@ -19,7 +19,7 @@ data:
             "type": { "type": "keyword" },
             "location_array": { "type": "geo_point" },
             "location_properties": { "type": "geo_point" },
-            "location_string": { "type": "geo_point" },
+            "location_string": { "type": "geo_point" }
           }
       }
     }
