--- a/daemonset.yml
+++ b/daemonset.yml
@@ -36,5 +36,5 @@ spec:
             sysctl -w net.ipv4.tcp_slow_start_after_idle=0
             sysctl -w net.ipv4.tcp_tw_reuse=1
             sysctl -w net.ipv4.ip_local_port_range="10240 65535"
-            sysctl -w fs.inotify.max_user_instances=1024
+            sysctl -w fs.inotify.max_user_instances=524288
             echo "done"
