--- a/biz4x-backend.yml
+++ b/biz4x-backend.yml
@@ -22,16 +22,16 @@ spec:
         component: biz4x
     spec:
       terminationGracePeriodSeconds: 10
-#      affinity:
-#        podAntiAffinity:
-#          requiredDuringSchedulingIgnoredDuringExecution:
-#          - labelSelector:
-#              matchExpressions:
-#              - key: app
-#                operator: In
-#                values:
-#                - biz4x-backend
-#            topologyKey: "kubernetes.io/hostname"
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - biz4x-backend
+            topologyKey: "kubernetes.io/hostname"
       containers:
       - name: biz4x-backend
         image: 699575179986.dkr.ecr.ap-southeast-1.amazonaws.com/biz4x-backend:latest
@@ -41,6 +41,10 @@ spec:
             value: Production
           - name: ASPNETCORE_URLS
             value: "http://0.0.0.0:5002"
+          - name: COMPlus_ThreadPool_ForceMinWorkerThreads
+            value: "1000"
+          - name: COMPlus_ThreadPool_ForceMaxWorkerThreads
+            value: "10000"
         ports:
         - containerPort: 5002
           name: http
@@ -54,18 +58,18 @@ spec:
           httpGet:
             path: /health/ready
             port: http
-          initialDelaySeconds: 90
+          initialDelaySeconds: 60
           periodSeconds: 5
-          timeoutSeconds: 3
+          timeoutSeconds: 10
           failureThreshold: 3
           successThreshold: 1
         livenessProbe:
           httpGet:
             path: /health/live
             port: http
-          initialDelaySeconds: 90
+          initialDelaySeconds: 60
           periodSeconds: 3
-          timeoutSeconds: 3
+          timeoutSeconds: 10
           failureThreshold: 3
           successThreshold: 1
         volumeMounts:
@@ -75,10 +79,10 @@ spec:
           readOnly: true
         - name: log
           mountPath: /var/log/aspnetcore
-        resources:
-          limits:
-            cpu: 250m
-            memory: 1024Mi
+#        resources:
+#          limits:
+#            cpu: 500m
+#            memory: 1024Mi
       - name: fluentd
         image: khteh/fluentd:latest
         env:
