--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -30,6 +30,13 @@ spec:
                 values:
                 - data
             topologyKey: "kubernetes.io/hostname"
+      initContainers:
+      - name: fix-volume-mount-permission
+        image: busybox 
+        command: ["sh", "-c", "chown -R 1000:0 /usr/share/elasticsearch/data"]
+        volumeMounts:
+        - name: elasticsearch-persistent-storage
+          mountPath: /usr/share/elasticsearch/data
       containers:
       - name: elasticsearch
         securityContext:
@@ -92,8 +99,8 @@ spec:
         - name: elasticsearch-config
           mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
           subPath: elasticsearch.yml
-#        - name: elasticsearch-persistent-storage
-#          mountPath: /var/lib/elasticsearch
+        - name: elasticsearch-persistent-storage
+          mountPath: /usr/share/elasticsearch/data
       volumes:
       - name: elasticsearch-config
         configMap:
@@ -101,11 +108,11 @@ spec:
           items:
             - key: elasticsearch-data.yml
               path: elasticsearch.yml
-#  volumeClaimTemplates:
-#  - metadata:
-#      name: elasticsearch-persistent-storage
-#    spec:
-#      accessModes: [ "ReadWriteOnce" ]
-#      resources:
-#        requests:
-#          storage: 5Gi
+  volumeClaimTemplates:
+  - metadata:
+      name: elasticsearch-persistent-storage
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 10Gi
