--- a/redis-cluster.yml
+++ b/redis-cluster.yml
@@ -80,4 +80,4 @@ spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 100Mi
+          storage: 10Gi
