--- a/rabbitmq-config.yml
+++ b/rabbitmq-config.yml
@@ -29,4 +29,5 @@ data:
       queue_master_locator=min-masters
       ## See https://www.rabbitmq.com/access-control.html#loopback-users
       loopback_users.guest = false
+      loopback_users.biz4x = false
       password_hashing_module = rabbit_password_hashing_sha512
