--- a/rabbitmq_rbac.yml
+++ b/rabbitmq_rbac.yml
@@ -8,7 +8,7 @@ metadata:
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: endpoint-reader
+  name: svc-rabbitmq
   namespace: default 
 rules:
 - apiGroups: [""]
@@ -18,7 +18,7 @@ rules:
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: endpoint-reader
+  name: svc-rabbitmq
   namespace: default
 subjects:
 - kind: ServiceAccount
@@ -26,4 +26,4 @@ subjects:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: endpoint-reader
+  name: svc-rabbitmq
