(1) Add resource requests for Kibana and rabbitmq (2) Update HPA to use extensions for ingress apiVersion

--- a/kibana.yml
+++ b/kibana.yml
@@ -66,6 +66,8 @@ spec:
           mountPath: /etc/kibana
           readOnly: true
         resources:
+          requests:
+            cpu: 250m
           limits:
             cpu: 500m
             memory: 1024Mi
