--- a/hpa.yml
+++ b/hpa.yml
@@ -22,7 +22,8 @@ spec:
       metric: 
         name: requests-per-second
       describedObject:
-        apiVersion: networking.k8s.io/v1beta1
+#        apiVersion: networking.k8s.io/v1beta1
+        apiVersion: extensions/v1beta1
         kind: Ingress 
         name: ingress
       target: 
@@ -56,7 +57,8 @@ spec:
       metric: 
         name: requests-per-second
       describedObject:
-        apiVersion: networking.k8s.io/v1beta1
+#        apiVersion: networking.k8s.io/v1beta1
+        apiVersion: extensions/v1beta1
         kind: Ingress 
         name: ingress
       target: 
